APB-288 bugfix search list, removed wrapping div profile_info_search, bugfix checking profile_btn_top if exists in common

--- a/apps/admin/css/admin.css
+++ b/apps/admin/css/admin.css
@@ -50,7 +50,8 @@
 	visibility: hidden;
 }
 /* common*/
-#profile_info_search{
+#profile_input_row,
+#profile_search_list_wrap{
 	visibility: hidden;
 	display:	none !important;
 }
